src/objects/SRT2TerritoryAssociation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CCEmailAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCEmailAddress</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>InterfaceLog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InterfaceLog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendMail</label>
        <type>Checkbox</type>
    </fields>
    <label>SRT2TerritoryAssociation</label>
</CustomObject>